support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_namespace_aliasnot.i
%module xxx

int blah;
namespace B = blah;
